Works with java 22