@@ -1,14 +1,11 @@
 #!/usr/bin/env bash
 
 set -euo pipefail
+set -x
 
-rm src/com/github/ivarref/GetSockOpt.class 2> /dev/null || true
-rm src/com/github/ivarref/GetSockOpt*.class 2> /dev/null || true
+rm -vf src/com/github/ivarref/*.class 2> /dev/null || true
 
-javac \
---release 20 \
---enable-preview \
-src/com/github/ivarref/GetSockOpt.java
+javac src/com/github/ivarref/GetSockOpt.java
 
 clojure -X:forever
 
